fix: Works two-column layout, About flower positioning
- Works: restore text-left/card-right grid (30/70 split)
- About: move decorFlower to bioGrid to prevent text overlap
- About: portrait overlaps hero bottom edge

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -2,7 +2,7 @@
 @use '../../styles/mixins' as *;
 
 .footer {
-  padding-top: 60px;
+  padding-top: 80px;
   background-color: $white;
   overflow: hidden;
 
@@ -21,7 +21,7 @@
   align-items: center;
   padding-bottom: 40px;
   @include body-font;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 500;
   color: $black;
 
